RESOLVED FIXED180036
[CoordGraphics] CoordinatedGraphicsLayer doesn't need to inherit from TextureMapperPlatformLayer::Client
https://bugs.webkit.org/show_bug.cgi?id=180036
Summary [CoordGraphics] CoordinatedGraphicsLayer doesn't need to inherit from Texture...
Zan Dobersek
Reported 2017-11-27 07:24:49 PST
[CoordGraphics] CoordinatedGraphicsLayer doesn't need to inherit from TextureMapperPlatformLayer::Client
Attachments
Patch (3.59 KB, patch)
2017-11-27 07:30 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2017-11-27 07:30:58 PST
Zan Dobersek
Comment 2 2017-11-27 09:05:50 PST
Comment on attachment 327636 [details] Patch Clearing flags on attachment: 327636 Committed r225174: <https://trac.webkit.org/changeset/225174>
Zan Dobersek
Comment 3 2017-11-27 09:05:54 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-12-06 16:47:44 PST
Note You need to log in before you can comment on or make changes to this bug.