[CoordGraphics] CoordinatedGraphicsLayer doesn't need to inherit from TextureMapperPlatformLayer::Client https://bugs.webkit.org/show_bug.cgi?id=180036

Reviewed by Carlos Garcia Campos.

There's no reason CoordinatedGraphicsLayer should inherit from
TextureMapperPlatformLayer::Client. CoordinatedGraphicsLayer objects are
not used anywhere through that type, and all the overridden methods are
empty anyway. The TextureMapperPlatformLayer::Client class (along with
TextureMapperPlatformLayer) is nowadays only used in the direct
TextureMapper implementation of GraphicsLayer.

No new tests -- no change in behavior.

* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::platformLayerWillBeDestroyed): Deleted.
(WebCore::CoordinatedGraphicsLayer::setPlatformLayerNeedsDisplay): Deleted.
* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.h:


Canonical link: https://commits.webkit.org/196035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225174 268f45cc-cd09-0410-ab3c-d52691b4dbfc